# schedule_bot

./: .gitignore  compose.yml  config.json  config_bot.py  dockerfile  main.py  pyproject.toml  readme.md
addons/: __init__.py  notifications.py  weeks.py
database/: __init__.py  midleware.py  misc.py  model.py  schedule_func.py  user_func.py
examples/: schedule_template.docx  session_schedule_template.docx
handlers/: abitur_handlers.py  admin_handlers.py  base_handlers.py  schedule_handlers.py
keyboards/: __init__.py  inline_keyboards.py  reply_keyboards.py
states/: states.py
templates/: __init__.py  schedule_template.py  session_template.py  txt_templates_example.py
transformation/: __init__.py  transform_education_schedule.py  transform_session_schedule.py
