[project]
name = "schedule-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikolaev2096"}
]

readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram (>=3.22.0,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "greenlet (>=3.3.0,<4.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"